Add homes and rooms support
